changed fotoApp to basicAuth

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
 			"app/database/seeds",
 			"app/tests/TestCase.php"
 		],
-		"files": ["app/fotoApp/helpers.php"],
+		"files": ["app/basicAuth/helpers.php"],
 		"psr-4": {
-			"fotoApp\\": "app/fotoApp"
+			"basicAuth\\": "app/basicAuth"
 		}
 	},
 	"scripts": {
