--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
-	"keywords": ["framework", "laravel"],
-	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
+		"cartalyst/sentry": "2.1.*",
 		"laracasts/validation": "~1.0"
+	},
+	"require-dev": {
+		"way/generators": "2.*"
 	},
 	"autoload": {
 		"classmap": [
@@ -37,8 +37,6 @@
 	"config": {
 		"preferred-install": "dist"
 	},
-	"minimum-stability": "stable",
-	"require-dev": {
-		"way/generators": "2.*"
-	}
+	"minimum-stability": "stable"
+
 }
