--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "5.0.*",
+		"cartalyst/sentry": "dev-feature/laravel-5",
+		"illuminate/html": "5.0.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
@@ -17,7 +19,10 @@
 		],
 		"psr-4": {
 			"App\\": "app/"
-		}
+		},
+		"files": [
+        	"app/helpers.php"
+    	]
 	},
 	"autoload-dev": {
 		"classmap": [
