--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 /bootstrap/compiled.php
+/bootstrap/cache
+/storage
 /vendor
 composer.phar
 composer.lock
 .env.*.php
 .env.php
+.env
 .DS_Store
 Thumbs.db
